kubernetes/apps/home-automation/appdaemon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: appdaemon
  labels:
    app: appdaemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appdaemon
  template:
    metadata:
      labels:
        app: appdaemon
        nfsMount: "true"
    spec:
      containers:
      - name: appdaemon
        image: acockburn/appdaemon
        ports:
          - containerPort: 5050
        volumeMounts:
        - mountPath: "/conf"
          subPath: appdaemon
          name: unraid-storage
      volumes:
      - name: unraid-storage
        persistentVolumeClaim:
          claimName: unraid-pvc
