kubernetes/apps/home-automation/appdaemon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
  namespace: home-automation
spec:
  selector:
    app: appdaemon
  type: LoadBalancer
  ports: 
  - name: webui
    protocol: TCP
    port: 5050
    targetPort: 5050
